force-app/main/default/objects/BLN_FileCategoryConfig__mdt/BLN_FileCategoryConfig__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-9422, FOUK-7055 
Metadata created for storing configuration of File category</description>
    <label>File Category Config</label>
    <pluralLabel>File Category Configs</pluralLabel>
</CustomObject>