force-app/main/default/objects/BLN_FileCategoryConfig__mdt/fields/BLN_CategoryType__c.field-meta.xml
<CustomField>
    <fullName>BLN_CategoryType__c</fullName>
    <description>FOUK-9422, FOUK-7055 - created for storing configuration of File category</description>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Inspection</fullName>
                <default>true</default>
                <label>Pre-Inspection</label>
            </value>
            <value>
                <fullName>Additional Inspection</fullName>
            </value>
            <value>
                <fullName>Post-Inspection</fullName>
            </value>
            <value>
                <fullName>Recalibration</fullName>
            </value>
            <value>
                <fullName>Failed Appointment Photos</fullName>
            </value>
            <value>
                <fullName>Corrective Action Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>