force-app/main/default/objects/BLN_FileCategoryConfig__mdt/fields/BLN_Keywords__c.field-meta.xml
<CustomField>
    <fullName>BLN_Keywords__c</fullName>
    <description>FOUK-9422, FOUK-7055 created for storing File Keywords</description>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>