force-app/main/default/objects/BLN_FileCategoryConfig__mdt/fields/BLN_Order__c.field-meta.xml
<CustomField>
    <fullName>BLN_Order__c</fullName>
    <description>FOUK-9422, FOUK-7055 created for storing Order of File</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>