force-app/main/default/objects/BLN_FileCategoryConfig__mdt/fields/BLN_ShowToCustomer__c.field-meta.xml
<CustomField>
    <fullName>BLN_ShowToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-9422, FOUK-7055  created for storing the value to show to customer</description>
    <label>Show to customer</label>
    <type>Checkbox</type>
</CustomField>