force-app/main/default/objects/BLN_FileCategoryConfig__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BLN_CategoryType__c</columns>
    <columns>BLN_Keywords__c</columns>
    <columns>BLN_Order__c</columns>
    <columns>BLN_ShowToCustomer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>